ingress-test2/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello2
  labels:
    app: hello
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    # port: 30081
    targetPort: 80
  selector:
    app: hello
