ingress-test2/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k-jenkins.softworks.co.kr
    http:
      paths:
      # - path: /grafana
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello2
            port:
              name: http
